--- a/src/App.scss
+++ b/src/App.scss
@@ -100,13 +100,8 @@ $placeholder: rgb(200, 200, 200);
 $theme-colors: (
 
 
-  grey:rgb(240,240,240),
-  pink:rgb(218,16,96),
-  blue:rgb(70,160,206),
-  borderGrey:rgb(215,215,215),
-  jsArea:rgb(245, 248, 252),
-  lightGreyText:rgb(150, 150, 150),
-  warningOrange:rgb(245, 185, 64)
+
+  warningOrange:rgb(245, 185, 64),
 
  
   grey:           rgb(240,240,240),
