custom themes for html and css

--- a/src/App.scss
+++ b/src/App.scss
@@ -109,7 +109,8 @@ $theme-colors: (
   blue:           rgb(70,160,206),
   borderGrey:     rgb(215,215,215),
   jsArea:         rgb(245, 248, 252),
-  lightGreyText:  rgb(102, 102, 102)
+  lightGreyText:  rgb(102, 102, 102),
+  htmlCssArea:    rgb(252,249,245)
 
 
 
