--- a/src/App.scss
+++ b/src/App.scss
@@ -101,9 +101,9 @@ $theme-colors: (
 
 
 
-  warningOrange:rgb(245, 185, 64),
+  warningOrange: rgba(255, 184, 0, .5),
 
- 
+
   grey:           rgb(240,240,240),
   pink:           rgb(218,16,96),
   blue:           rgb(70,160,206),
@@ -132,7 +132,7 @@ html, body {
 
 .marker{
   position: absolute;
- 
+
     width: 100% !important;
     border-radius: unset !important;
     left: 0 !important;
