--- a/src/App.scss
+++ b/src/App.scss
@@ -112,7 +112,8 @@ $theme-colors: (
   greyText:       rgb(102, 102, 102),
   lightGreyText:  rgb(125, 125, 125),
   htmlCssArea:    rgb(252,249,245),
-  htmlCssName:   rgb(86,162, 155)
+  htmlCssName:   rgb(86,162, 155),
+  borderDarkGrey: rgb(175, 175, 175)
 
 
 
