--- a/src/App.scss
+++ b/src/App.scss
@@ -103,7 +103,7 @@ $theme-colors: (
 
   warningOrange: rgba(255, 184, 0, .5),
 
-
+  lightGrey:           rgb(245,245,245),
   grey:           rgb(240,240,240),
   pink:           rgb(218,16,96),
   blue:           rgb(70,160,206),
