added js importer

--- a/src/App.scss
+++ b/src/App.scss
@@ -100,7 +100,7 @@ $placeholder: rgb(200, 200, 200);
 $theme-colors: (
 
 
-
+warningOrangeDark: rgba(255, 184, 0, 1),
   warningOrange: rgba(255, 184, 0, .5),
 
   lightGrey:           rgb(245,245,245),
