made sidebar not terrible

--- a/src/App.scss
+++ b/src/App.scss
@@ -114,7 +114,8 @@ warningOrangeDark: rgba(255, 184, 0, 1),
   lightGreyText:  rgb(125, 125, 125),
   htmlCssArea:    rgb(252,249,245),
   htmlCssName:   rgb(86,162, 155),
-  borderDarkGrey: rgb(175, 175, 175)
+  borderDarkGrey: rgb(175, 175, 175),
+  debug:        rgba(0, 0, 0, .1)
 
 
 
