added adder dropdowns

--- a/src/App.scss
+++ b/src/App.scss
@@ -161,7 +161,10 @@ font-family: 'Roboto', sans-serif;
   font-family: 'Roboto', sans-serif;
   font-weight: 400;
   font-size: 13px;
+  cursor: default;
+  opacity: .8;
 }
+
 
 .args{
   border:none;
