--- a/src/App.scss
+++ b/src/App.scss
@@ -201,4 +201,7 @@ font-family: 'Montserrat', sans-serif;
 }
 
 
+$tooltip-bg:                        rgb(0,0,0);
+$tooltip-arrow-color:               rgb(0,0,0);
+
 @import "../node_modules/bootstrap/scss/bootstrap";
