errors in layer picker

--- a/src/App.scss
+++ b/src/App.scss
@@ -88,7 +88,7 @@ $theme-colors: (
 
 
 warningOrangeDark: rgba(255, 184, 0, 1),
-  warningOrange: rgba(255, 184, 0, .5),
+  warningOrange: rgba(250, 220, 160, 1),
 
   lightGrey:           rgb(245,245,245),
   grey:           rgb(240,240,240),
