styles are in progress

--- a/src/App.scss
+++ b/src/App.scss
@@ -93,6 +93,7 @@ warningOrangeDark: rgba(215, 155, 0, 1),
   lightGrey:           rgb(245,245,245),
   grey:           rgb(240,240,240),
   pink:           rgb(218,16,96),
+  listener:       rgb(138, 95, 208),
   blue:           rgb(70,160,206),
   borderGrey:     rgb(215,215,215),
   jsArea:         rgb(245, 248, 252),
