made line pickers expand

--- a/src/App.scss
+++ b/src/App.scss
@@ -160,6 +160,13 @@ font-family: 'Montserrat', sans-serif;
   cursor: default;
 }
 
+.pickerBold{
+  font-family: 'Montserrat', sans-serif;
+  font-weight: 400;
+  font-size: 12px;
+  cursor: default;
+}
+
 .modal{
   font-family: 'Montserrat', sans-serif;
   font-weight: 300;
