--- a/src/App.scss
+++ b/src/App.scss
@@ -156,7 +156,14 @@ font-family: 'Montserrat', sans-serif;
 
 
 .picker{
-  font-family: 'Montserrat', sans-serif;
+  font-family: 'Montserrat', sans-serif !important;
+  font-weight: 300;
+  font-size: 12px;
+  cursor: default;
+}
+
+.picker-style-tooltip > .tooltip-inner{
+  font-family: 'Montserrat', sans-serif !important;
   font-weight: 300;
   font-size: 12px;
   cursor: default;
