--- a/src/App.scss
+++ b/src/App.scss
@@ -82,6 +82,7 @@ $theme-colors: (
   listener: rgb(138, 95, 208),
   blue: rgb(70, 160, 206),
   borderGrey: rgb(215, 215, 215),
+  borderLightGrey: rgb(225, 225, 225),
   jsArea: rgb(245, 248, 252),
   greyText: rgb(90, 90, 90),
   greyIcon: rgb(0, 0, 0),
