fixed circular dependancies

--- a/src/App.scss
+++ b/src/App.scss
@@ -101,6 +101,29 @@ $theme-colors: (
   htmlArea:rgb(145, 155, 158)*/
 );
 
+.css3-shadow {
+  position: relative;
+  -webkit-box-shadow: 0 1px 4px rgba(0, 0, 0, 0.3);
+  box-shadow: 0 1px 4px rgba(0, 0, 0, 0.3);
+}
+/*==================================================
+ * Drop shadow effect with box-shadow
+ * ===============================================*/
+.css3-shadow:after {
+  content: "";
+  position: absolute;
+  z-index: -1;
+  -webkit-box-shadow: 0 0 40px rgba(0, 0, 0, 0.8);
+  box-shadow: 0 0 40px rgba(0, 0, 0, 0.8);
+  bottom: 0px;
+  left: 10%;
+  right: 10%;
+  width: 80%;
+  height: 50%;
+  -moz-border-radius: 100%;
+  border-radius: 100%;
+}
+
 html,
 body {
   overflow: hidden;
