marker infrstructure set up

--- a/src/App.scss
+++ b/src/App.scss
@@ -130,12 +130,16 @@ body {
   overscroll-behavior: none;
 }
 
-.marker {
+.errorMarker {
   position: absolute;
 
   width: 100% !important;
   border-radius: unset !important;
   left: 0 !important;
+}
+
+.referenceMarker {
+  position: absolute;
 }
 
 .name {
