highlight colors working

--- a/src/App.scss
+++ b/src/App.scss
@@ -92,7 +92,11 @@ $theme-colors: (
   borderDarkGrey: rgb(175, 175, 175),
   debug: rgba(0, 0, 0, 0.1),
   seeThroughWhite: rgba(255, 255, 255, 0.7),
-  /*  background:rgb(215,215,215),
+  fileLine: rgba(140, 154, 53, 0.3),
+  jsLine: rgba(70, 160, 206, 0.3),
+  listenerLine: rgba(218, 16, 96, 0.3),
+  systemLine: rgba(170, 170, 170, 0.3)
+    /*  background:rgb(215,215,215),
   jsArea:rgb(145, 155, 158),
   fnName:rgb(69,139,205),
   specialFnName:rgb(220,60,110),
